Worked on express

--- a/Website/index.html
+++ b/Website/index.html
@@ -39,6 +39,10 @@
     .settingsImage {
         transform: scale(0.25, 0.25);
     }
+    .vertical-center {
+        position: absolute;
+        left: 50%;
+    }
 </style>
 
 <html>
@@ -86,6 +90,11 @@
                                 <img src="images/settings.png" style="width:100%" class="settingsImage">
                             </a>
                         </nav>
+                    </div>
+                </div>
+                <div>
+                    <div>
+                        <h1 class="vertical-center" id="test"></h1>
                     </div>
                 </div>
             </div>
