json and index.html

--- a/Website/index.html
+++ b/Website/index.html
@@ -16,6 +16,14 @@
     }
 </style>
 
+<script type="text/javascript" src="settings.json"></script>
+<script>
+    function load() {
+        var settings = JSON.parse(data);
+    }
+    
+</script>
+
 <html lang="en">
 <head>
     <meta charset="UTF-8">
